--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
+    <string name="register_already">Already registered ? Sign in here</string>
+    <string name="email_register">Please enter your email address</string>
+    <string name="password_register">Password</string>
+    <string name="register_text">"Please register in order to use the app."</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
