--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="sign_in_text">Don\t have an account? Sign up here</string>
     <string name="login_email">Enter your email</string>
     <string name="login_button">Login</string>
-    <string name="login_password">Please enter your password</string>
+    <string name="login_password">Password</string>
     <string name="login_text">Please use your email and password for login</string>
     <string name="register_already">Already registered ? Sign in here</string>
     <string name="email_register">Please enter your email address</string>
