--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="Logout">Logout</string>
-    <string name="sign_in_text">Don\t have an account? Sign up here</string>
+    <string name="sign_in_text">Don\'t have an account? Sign up here</string>
     <string name="login_email">Enter your email</string>
     <string name="login_button">Login</string>
     <string name="login_password">Password</string>
@@ -13,7 +13,7 @@
     <string name="register_already">Already registered ? Sign in here</string>
     <string name="email_register">Please enter your email address</string>
     <string name="password_register">Password</string>
-    <string name="register_text">"Please register in order to use the app."</string>
+    <string name="register_text">"Please register in order to use the app"</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -21,6 +21,7 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
+    <string name="edit_date">Tap and hold on a date in order to edit your daily food intake for that day</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
